force-app/main/default/objects/Portfolio_Skill__c/fields/Name_EN__c.field-meta.xml
<CustomField>
    <fullName>Name_EN__c</fullName>
    <label>Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>