force-app/main/default/objects/Portfolio_Skill__c/fields/Portfolio_Profile__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Profile__c</fullName>
    <label>Portfolio Profile</label>
    <referenceTo>Portfolio_Profile__c</referenceTo>
    <relationshipLabel>Portfolio Skills</relationshipLabel>
    <relationshipName>Portfolio_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>